<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        style="@style/Theme.AppCompat.DayNight.DarkActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/Theme.Dukan.AppName.Toolbar"
        app:titleTextColor="@color/persimmon_500" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/settings_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/persimmon_500"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/persimmon_500">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications" />
    </com.google.android.material.tabs.TabLayout>
</com.google.android.material.appbar.AppBarLayout>